--- a/Lenos/Areas/Manage/Views/CategoryBanner/Index.cshtml
+++ b/Lenos/Areas/Manage/Views/CategoryBanner/Index.cshtml
@@ -1,14 +1,14 @@
-﻿@model IEnumerable<Slider>
-@{ int count = (ViewBag.PageIndex - 1) * 5; }
+﻿@model IEnumerable<CategoryBanner>
+@{ int count = (ViewBag.PageIndex - 1) * 6; }
 
 @{
     ViewData["Title"] = "Index";
 }
 <div class="row mb-5 mt-5 align-items-center">
-    <div class="col-lg-2 h3 text-gray-800">
-        <h1 class="h3 my-0 text-gray-800">Slider</h1>
+    <div class="col-lg-3 h3 text-gray-800">
+        <h1 class="h3 my-0 text-gray-800">Category Banner</h1>
     </div>
-    <div class="col-lg-8 h3 text-gray-800">
+    <div class="col-lg-7 h3 text-gray-800">
         <form class="d-flex justify-content-center">
             <div class="form-group my-0 w-25">
                 <select class="form-control" name="status">
@@ -38,12 +38,12 @@
         </form>
     </div>
     <div class="col-lg-2 h3 text-gray-800">
-        <a asp-controller="Slider" asp-action="Create" asp-route-status="@ViewBag.Status" asp-route-page="@ViewBag.PageIndex" asp-area="Manage" class="btn btn-success float-right">Create</a>
+        <a asp-controller="CategoryBanner" asp-action="Create" asp-route-status="@ViewBag.Status" asp-route-page="@ViewBag.PageIndex" asp-area="Manage" class="btn btn-success float-right">Create</a>
     </div>
 </div>
 <div class="row">
     <div class="col-lg-12 dataTable">
-        @await Html.PartialAsync("_SliderIndexPartial", Model)
+        @await Html.PartialAsync("_CategoryBannerIndexPartial", Model)
     </div>
     <div class="col-lg-12 d-flex justify-content-center">
         <nav aria-label="Page navigation example">
