--- a/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link href="~/manage/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
     <!-- Custom styles for this template-->
     <link href="~/manage/css/sb-admin-2.min.css" rel="stylesheet">
@@ -58,21 +59,21 @@
 
             <!-- Nav Item - Settings-->
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Social" asp-action="Index" asp-area="Manage"><i class="fas fa-fw fa-cog"></i>Social</a>
+                <a class="nav-link" asp-controller="Social" asp-action="Index" asp-area="Manage"><i class="bi bi-people"></i>Social</a>
             </li>
 
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Settings-->
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Slider" asp-action="Index" asp-area="Manage"><i class="bi bi-card-image"></i>Slider</a>
+                <a class="nav-link" asp-controller="Slider" asp-action="Index" asp-area="Manage"><i class="bi bi-back"></i>Slider</a>
             </li>
 
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Settings-->
             <li class="nav-item">
-                <a class="nav-link" asp-controller="ServiceOffer" asp-action="Index" asp-area="Manage"><i class="fas fa-fw fa-cog"></i>Service Offer</a>
+                <a class="nav-link" asp-controller="CategoryBanner" asp-action="Index" asp-area="Manage"><i class="bi bi-image"></i>Category Banner</a>
             </li>
 
             <hr class="sidebar-divider my-0">
