--- a/Lenos/Areas/Manage/Views/Shared/_SliderIndexPartial.cshtml
+++ b/Lenos/Areas/Manage/Views/Shared/_SliderIndexPartial.cshtml
@@ -1,30 +1,25 @@
 ﻿@model IEnumerable<Slider>
-@{ int count = (ViewBag.PageIndex - 1) * 5; }
+@{ int count = (ViewBag.PageIndex - 1) * 2; }
 
 
-<table class="table table-striped text-center">
-    <thead>
-        <tr>
-            <th scope="col">#</th>
-            <th scope="col">Title</th>
-            <th scope="col">Status</th>
-            <th scope="col">Setting</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (Slider slider in Model)
-        {
-            count++;
-<tr>
-    <th scope="row">@count</th>
-    <td>@slider.Title</td>
-    <td style="color:@(slider.IsDeleted ? "red":"green")">@(slider.IsDeleted ? "DeActive":"Active")</td>
-    <td>
-        <a class="btn btn-primary w-25" asp-action="Detail" asp-route-id="@slider.Id">Detail</a>
-        <a class="btn btn-warning w-25" asp-action="Update" asp-route-id="@slider.Id">Update</a>
-        <a id="@(slider.IsDeleted ? "restoreCategory":"deleteCategory")" class="btn w-25 @(slider.IsDeleted ? "btn-primary":"btn-danger")" asp-route-status="@ViewBag.Status" asp-route-page="@ViewBag.PageIndex" asp-action="@(slider.IsDeleted ? "Restore":"Delete")" asp-route-id="@slider.Id">@(slider.IsDeleted ? "Restore":"Delete")</a>
-    </td>
-</tr>
-}
-    </tbody>
-</table>
+<div class="row">
+    @foreach (Slider slider in Model)
+    {
+        count++;
+        <div class="col-lg-12 border py-3 mb-5">
+            <div style="position: relative" class="slider">
+                <img style="width: 100%" src="~/assets/img/slider/@slider.Image" alt="Alternate Text" />
+                <div style="position: absolute; left: 10%; top: 20%; width: 50%;" class="slider-content">
+                    <span style="background-color: #1A1A1A; color: #fff; padding: 7px 20px; border-radius: 20px; font-size: 20px;">@slider.Title</span>
+                    <h1 style="margin: 3rem 0; color: #fff; font-size: 70px;">@slider.Description</h1>
+                    <a style="padding: 13px 30px; background-color: #fff; color: #1A1A1A; transition: all 0.3s; text-decoration: none; font-weight: 600; font-size: 15px;" href="#">PRE - ORDER NOW</a>
+                </div>
+            </div>
+            <div class="mt-4 align-items-center d-flex justify-content-between">
+                <a class="btn btn-warning w-25" asp-action="Update" asp-route-id="@slider.Id">Update</a>
+                <h1 class="px-2 user-select-none mx-auto d-inline border my-2">@count</h1>
+                <a id="@(slider.IsDeleted ? "restoreCategory":"deleteCategory")" class="btn w-25 @(slider.IsDeleted ? "btn-primary":"btn-danger")" asp-route-status="@ViewBag.Status" asp-route-page="@ViewBag.PageIndex" asp-action="@(slider.IsDeleted ? "Restore":"Delete")" asp-route-id="@slider.Id">@(slider.IsDeleted ? "Restore":"Delete")</a>
+            </div>
+        </div>
+    }
+</div>
