--- a/Lenos/Areas/Manage/Views/Social/Index.cshtml
+++ b/Lenos/Areas/Manage/Views/Social/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Slider>
+﻿@model IEnumerable<Social>
 @{ int count = (ViewBag.PageIndex - 1) * 5; }
 
 @{
@@ -6,7 +6,7 @@
 }
 <div class="row mb-5 mt-5 align-items-center">
     <div class="col-lg-2 h3 text-gray-800">
-        <h1 class="h3 my-0 text-gray-800">Slider</h1>
+        <h1 class="h3 my-0 text-gray-800">Social</h1>
     </div>
     <div class="col-lg-8 h3 text-gray-800">
         <form class="d-flex justify-content-center">
@@ -38,12 +38,12 @@
         </form>
     </div>
     <div class="col-lg-2 h3 text-gray-800">
-        <a asp-controller="Slider" asp-action="Create" asp-route-status="@ViewBag.Status" asp-route-page="@ViewBag.PageIndex" asp-area="Manage" class="btn btn-success float-right">Create</a>
+        <a asp-controller="Social" asp-action="Create" asp-route-status="@ViewBag.Status" asp-route-page="@ViewBag.PageIndex" asp-area="Manage" class="btn btn-success float-right">Add Social</a>
     </div>
 </div>
 <div class="row">
     <div class="col-lg-12 dataTable">
-        @await Html.PartialAsync("_SliderIndexPartial", Model)
+        @await Html.PartialAsync("_SocialIndexPartial", Model)
     </div>
     <div class="col-lg-12 d-flex justify-content-center">
         <nav aria-label="Page navigation example">
