ProductPromo-Banner-Category_CRUD

--- a/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -80,7 +80,13 @@
 
             <!-- Nav Item - Settings-->
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Brand" asp-action="Index" asp-area="Manage"><i class="fas fa-fw fa-cog"></i>Brand</a>
+                <a class="nav-link" asp-controller="ProductPromo" asp-action="Index" asp-area="Manage"><i class="bi bi-badge-ad"></i>Product Promo Banner</a>
+            </li>
+
+            <hr class="sidebar-divider my-0">
+
+            <li class="nav-item">
+                <a class="nav-link" asp-controller="Banner" asp-action="Index" asp-area="Manage"><i class="bi bi-aspect-ratio"></i>Banner</a>
             </li>
 
             <hr class="sidebar-divider my-0">
