--- a/Lenos/Areas/Manage/Views/CategoryBanner/Update.cshtml
+++ b/Lenos/Areas/Manage/Views/CategoryBanner/Update.cshtml
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col-lg-6 h3 mb-4 text-gray-800">
-        <h1>Category Banner Create</h1>
+        <h1>Category Banner Update</h1>
     </div>
     <div class="col-lg-12 mx-auto">
         <form method="post" enctype="multipart/form-data">
