--- a/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/Lenos/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -98,13 +98,7 @@
             <hr class="sidebar-divider my-0">
 
             <li class="nav-item">
-                <a class="nav-link" asp-controller="Size" asp-action="Index" asp-area="Manage"><i class="fas fa-fw fa-bars"></i>Product Size</a>
-            </li>
-
-            <hr class="sidebar-divider my-0">
-
-            <li class="nav-item">
-                <a class="nav-link" asp-controller="Color" asp-action="Index" asp-area="Manage"><i class="fas fa-fw fa-bars"></i>Product Color</a>
+                <a class="nav-link" asp-controller="Tag" asp-action="Index" asp-area="Manage"><i class="bi bi-tags"></i>Tag</a>
             </li>
 
             <hr class="sidebar-divider my-0">
